chore: optimize route list cmd output
